# 0Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Lie.sln  README.md  s00nya.sln
0Engine/: 0Engine.vcxproj  0Engine.vcxproj.filters  CMakeLists.txt
0Engine/Debugger/: console_logger.cpp  logger.cpp
0Engine/Game/: game.cpp  locator.cpp  timer.cpp
0Engine/GameObject/: camera.cpp  game_object_2d.cpp  gameobject.cpp  scene_2d.cpp
0Engine/Graphics/: material.cpp  raw_images.cpp  renderer.cpp  shader.cpp  sprite_2d.cpp  vertex.cpp  vertex_buffer_object.cpp  vertex_buffer_object_2d.cpp  window.cpp
0Engine/Headers/: s00nya.h  s00nya_defs.h
0Engine/Headers/Debugger/: console_logger.h  logger.h
0Engine/Headers/Game/: game.h  locator.h  timer.h
0Engine/Headers/GameObject/: camera.h  game_object_2d.h  gameobject.h  scene_2d.h
0Engine/Headers/Graphics/: material.h  raw_images.h  renderer.h  shader.h  sprite_2d.h  vertex.h  vertex_buffer_object.h  vertex_buffer_object_2d.h  window.h
0Engine/Headers/Input/: input.h  input_actions.h  input_manager.h  input_values.h  inputactions.h  inputvalues.h
0Engine/Headers/Math/: dimension.h  matrix3.h  matrix4.h  transform2D.h  transform_2d.h  vector2.h  vector3.h  vector4.h
0Engine/Headers/Physics/: collider_2d.h  collider_sat.h  collision_2d.h  collision_sat.h  rigid_body.h
0Engine/Headers/Utility/: event_manager.h  events.h  resource_manager.h  timer.h
0Engine/Input/: input.cpp  input_manager.cpp
0Engine/Math/: dimension.cpp  matrix3.cpp  matrix4.cpp  transform2D.cpp  transform_2d.cpp  vector2.cpp  vector3.cpp  vector4.cpp
0Engine/Physics/: collider_2d.cpp  collider_sat.cpp  collision_2d.cpp  collision_sat.cpp  rigid_body.cpp
0Engine/Utility/: event_manager.cpp  resource_manager.cpp  timer.cpp
Dependencies/GLEW/: CMakeLists.txt  GLEW.vcxproj  GLEW.vcxproj.filters
Dependencies/GLEW/src/: glewinfo.c
Dependencies/GLFW/: CMakeLists.txt  GLFW.vcxproj  GLFW.vcxproj.filters
Dependencies/GLFW/src/: cocoa_init.m  cocoa_joystick.h  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_time.c  cocoa_window.m  egl_context.c  egl_context.h  glfw_config.h  glx_context.c  glx_context.h  internal.h  linux_joystick.c  linux_joystick.h  mir_init.c  mir_monitor.c  mir_platform.h  mir_window.c  nsgl_context.h  nsgl_context.m  posix_time.c  posix_time.h  posix_tls.c  posix_tls.h  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.c  win32_joystick.h  win32_monitor.c  win32_platform.h  win32_time.c  win32_tls.c  win32_window.c  wl_init.c  wl_monitor.c  wl_platform.h  wl_window.c  x11_init.c  (+3 more)
Dependencies/lib/Win32/Release/: glew32.lib  glfw3.lib
Dependencies/lib/x64/Debug/: glew32.lib  glfw3.lib
Dependencies/lib/x64/Release/: glew32.lib  glfw3.lib
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  LICENSE.txt
Game/Resources/: Default2DShader.glsl  DefaultPostprocessingShader.glsl  simpleShader.glsl
Game/Source/: camera.h  game_entry.cpp  main.cpp  our_game.cpp  our_game.h  player.h  player_animated.h
Lie/: Lie.vcxproj  Lie.vcxproj.filters
Lie/Debug/: console_logger.cpp
Lie/Game/: game.cpp
Lie/Graphics/: window.cpp
Lie/Headers/: exceptions.h  lie.h
Lie/Headers/Game/: game.h
Lie/Headers/Graphics/: window.h
cmake/: CMakeLists.txt
cmake/Dependencies/lib/: dependent_libraries.md  glew32.lib  glfw3.lib
cmake/Game/: CMakeLists.txt
cmake/Lie/: CMakeLists.txt
cmake/Lie/Debugger/: console_logger.cpp
cmake/Lie/Game/: game.cpp
cmake/Lie/Graphics/: window.cpp
cmake/Lie/Headers/Debugger/: console_logger.h
cmake/Lie/Headers/Game/: game.h
cmake/Lie/Headers/Graphics/: window.h
